# avse-onchip-rfsoc

./: .gitattributes  .gitignore  ENVIRONMENT.md  README.md  pyproject.toml  requirements.txt
analysis/: PHASE1_DESIGN.md  README.md  baseline_reference.py  candidates.py  score_candidates.py  validate_baseline.py  working_set.py
analysis/candidates/: .gitkeep
analysis/results/: .gitkeep  baseline_validation.md  candidate_scoring.md
docs/: CHARTER.md  DECISIONS.md  PROGRESS.md  ROADMAP.md
docs/reference/: bottleneck-diagnosis.md  dead-ends.md  hardware-budget.md  prior-wins.md  reusable-assets.md
experiments/: PHASE2_PLAN.md  REGISTRY.md  build_pareto.py  pareto.md
experiments/p2-c2-quick/: metrics.json
experiments/p2-c2-r1/: metrics.json
experiments/p2-c7-full/: best.pt  deploy_weights.npz  metrics.json
experiments/p2-c7-hq/: metrics.json
hls/: DEPLOY_PLAN.md  OPTIMIZATION_PLAN.md  PHASE3_PLAN.md  README.md  RESULTS_avse_monolithic.md  RESULTS_csynth_c7.md
hls/reports/: README.md  (+5 more)
hw/: README.md  rebuild_vivado.bat  rebuild_vivado_opt.bat
test reference/: scenes.dev.json  selection_manifest.json
tools/: bench_inference.py  c7_fixedpoint.py  dump_hls_vectors.py  eval_deploy.py  eval_fp32_snr_bins.py  eval_full_dev.py  eval_video_ablation_snr_bins.py  export_weights.py  gen_hls_weights.py  plot_snr_bins.py  plot_video_ablation.py  prep_board_novideo_chunks.py  prep_board_snr_bins.py  prep_board_windows.py  run_board_chunks.sh  score_board.py  score_board_novideo.py  score_board_snr_bins.py  setup_venv.sh  summarize_efficiency.py  verify_data.py
(+67 files in other folders)
