[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "avse-onchip"
version = "0.0.1"
description = "Fully on-chip, single-configuration Audio-Visual Speech Enhancement for RFSoC (ZU48DR)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dongkun Xu" }]
license = { text = "Proprietary — research use" }

# Runtime deps are managed via requirements.txt (torch needs the cu128 index,
# which pyproject cannot express cleanly). Keep this list minimal/declarative.
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
